[Glitch] Fix distracting and confusing always-showing scrollbar track in boost confirmation modal
Port e48a64d3b541087acd101f9149c956ffb07119f3 to glitch-soc

--- a/app/javascript/flavours/glitch/styles/components.scss
+++ b/app/javascript/flavours/glitch/styles/components.scss
@@ -6726,7 +6726,7 @@ a.status-card {
 }
 
 .boost-modal__container {
-  overflow-x: scroll;
+  overflow-y: auto;
   padding: 10px;
 
   .status {
